@@ -202,8 +202,8 @@ setReplaceMethod(".svalue",
                        }
                      }
                    }
-                   
-                   tkevent.generate(getWidget(obj), "<<ValueChanged>>")
+                   ## notify event handlers
+                   tkevent.generate(getWidget(obj), "<<ComboboxSelected>>")
                    
                    return(obj)
                  })
@@ -236,7 +236,7 @@ setMethod(".leftBracket",
 
             n = length(x)               # no. items
             if(n == 0)
-              return(NA)
+              character(0)              # Thanks Yves
             
             items = tag(x,"items")
             
@@ -291,6 +291,7 @@ setReplaceMethod(".leftBracket",
 setMethod(".addhandlerchanged",
           signature(toolkit="guiWidgetsToolkittcltk",obj="gDroplisttcltk"),
           function(obj, toolkit, handler, action=NULL, ...) {
+
             .addHandler(obj,toolkit,"<<ComboboxSelected>>",handler,action,...)
 
             editable <- as.character(tkcget(getWidget(obj), "-state")) != "readonly"
